--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,26 @@
-aiohttp==3.8.4
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==23.1.0
-beautifulsoup4==4.12.2
 blinker==1.6.2
 cachelib==0.10.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
-cloudinary==1.33.0
 colorama==0.4.6
-EasyProcess==1.1
-entrypoint2==1.1
-et-xmlfile==1.1.0
 Flask==2.2.3
-Flask-Mail==0.9.1
 Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.3
-frozenlist==1.3.3
 greenlet==2.0.2
-gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-MouseInfo==0.1.3
-mss==7.0.1
-multidict==6.0.4
-numpy==1.21.6
-openpyxl==3.1.2
-packaging==23.1
-pandas==1.3.5
-Pillow==9.5.0
 psycopg2==2.9.6
-psycopg2-binary==2.9.7
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-PyJWT==2.7.0
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
-python-dateutil==2.8.2
 python-dotenv==0.10.5
-pytweening==1.0.7
-pytz==2023.3
-pywhatkit==5.4
 requests==2.30.0
-six==1.16.0
-soupsieve==2.4.1
 SQLAlchemy==2.0.13
-twilio==8.4.0
 typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==1.26.16
+urllib3==2.0.2
 Werkzeug==2.2.3
-wikipedia==1.4.0
-yarl==1.9.2
+Gunicorn
+Flask-Mail
+twilio
+cloudinary
+
