--- a/requirements.txt
+++ b/requirements.txt
@@ -11,50 +11,70 @@ charset-normalizer==3.1.0
 click==8.1.3
 cloudinary==1.33.0
 colorama==0.4.6
+docopt==0.6.2
 EasyProcess==1.1
 entrypoint2==1.1
 et-xmlfile==1.1.0
+filelock==3.12.2
 Flask==2.2.3
 Flask-Mail==0.9.1
 Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.3
 frozenlist==1.3.3
 greenlet==2.0.2
+gTTS==2.3.2
 gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
+Js2Py==0.74
 MarkupSafe==2.1.2
 MouseInfo==0.1.3
+mpmath==1.3.0
 mss==9.0.1
 multidict==6.0.4
-numpy==1.25.0
+networkx==3.1
+nltk==3.8.1
+numpy==1.25.2
 openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.3
 Pillow==9.5.0
+pipwin==0.5.2
 psycopg2==2.9.6
 psycopg2-binary==2.9.7
+PyAudio==0.2.13
 PyAutoGUI==0.9.54
 PyGetWindow==0.0.9
+pyjsparser==2.7.1
 PyJWT==2.7.0
 PyMsgBox==1.0.9
 pyperclip==1.8.2
+PyPrind==2.11.3
 PyRect==0.2.0
 pyscreenshot==3.1
 PyScreeze==0.1.29
+pySmartDL==1.3.4
 python-dateutil==2.8.2
 python-dotenv==0.10.5
 pytweening==1.0.7
 pytz==2023.3
 pywhatkit==5.4
+regex==2023.8.8
 requests==2.30.0
 six==1.16.0
 soupsieve==2.4.1
+SpeechRecognition==3.10.0
 SQLAlchemy==2.0.13
+sympy==1.12
+torch==2.0.1
+torchvision==0.15.2
+tqdm==4.66.1
 twilio==8.4.0
 typing_extensions==4.5.0
 tzdata==2023.3
+tzlocal==5.0.1
 ua-parser==0.18.0
 urllib3==1.26.16
 user-agents==2.2.0
